# Pwnagotchi-Pico

./: CMakeLists.txt  __main__.py  ina219.py  main.py
archive/: CMakeLists.txt
archive/pwnp/: pwnp.c
pwnp/: CMakeLists.txt  pwnp.c
